get settings working locally with Django environ

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,19 @@
+certifi==2020.12.5
+chardet==4.0.0
 Django==2.2.7
+django-environ==0.4.5
+django-lazysignup==2.0.0
 gunicorn==20.0.2
+idna==2.10
 Jinja2==2.10.3
 Markdown==3.2.1
 MarkupSafe==1.1.1
 psycopg2-binary==2.8.4
+python-http-client==3.3.2
 pytz==2019.3
-sqlparse==0.3.0
-django-lazysignup==2.0.0
-stripe==2.43.0
+requests==2.25.1
 sendgrid==6.2.2
+six==1.15.0
+sqlparse==0.3.0
+stripe==2.43.0
+urllib3==1.26.3
